feat(scheduling): implement MILP-based job scheduling with PuLP
- Add MILP formulation for job scheduling in HPC environments using PuLP.
- Define decision variables for start time, end time, and tier selection.
- Incorporate bandwidth constraints based on regression models.
- Enable switch between parallel and sequential job execution.
- Include example data sets for job representation and phase features.

BREAKING CHANGE: Introduce new dependency on PuLP library.

--- a/cluster_simulator/notebooks/iosea-workshop-3.ipynb
+++ b/cluster_simulator/notebooks/iosea-workshop-3.ipynb
@@ -27,6 +27,188 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 6.3 Exemples de Contraintes en Code\n",
+    "\n",
+    "L'un des aspects les plus importants de notre implémentation est la manière dont nous avons formalisé les contraintes du problème d'ordonnancement. Utilisant la bibliothèque `PuLP`, nous avons pu traduire les contraintes mathématiques en expressions de code compréhensibles et efficaces.\n",
+    "\n",
+    "Par exemple, pour s'assurer qu'une phase ne commence qu'après la fin de la phase précédente dans la même tâche, nous utilisons la contrainte suivante :\n",
+    "\n",
+    "```python\n",
+    "if i > 0:\n",
+    "    prob += x[job, i] >= y[job, i - 1], f\"StartAfterPrev_{job}_{i}\"\n",
+    "```\n",
+    "\n",
+    "Cette expression utilise des variables de décision \\( x \\) et \\( y \\) qui représentent respectivement le temps de début et de fin de chaque phase pour chaque tâche.\n",
+    "\n",
+    "Un autre exemple de contrainte est celui qui calcule la durée d'une phase en fonction de la somme des volumes de lecture et d'écriture et de la bande passante du tier de stockage choisi :\n",
+    "\n",
+    "```python\n",
+    "total_volume = phase['read_volume'] + phase['write_volume']\n",
+    "bandwidth = tier0_model(phase) if z[job, i, 0] == 1 else tier1_model(phase)\n",
+    "prob += y[job, i] == x[job, i] + total_volume / bandwidth, f\"EndTime_{job}_{i}\"\n",
+    "```\n",
+    "\n",
+    "Nous avons également ajouté des contraintes pour gérer la sélection des tiers de stockage et pour s'assurer que la bande passante globale n'excède pas les limites des tiers respectifs.\n",
+    "\n",
+    "Ces exemples illustrent comment notre implémentation en Python, appuyée par la bibliothèque `PuLP`, permet de formaliser un ensemble complexe de contraintes de manière claire et efficace. Ce formalisme facilite non seulement la résolution du problème, mais aussi l'expérimentation avec différentes configurations et objectifs d'optimisation.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Bien sûr, voici un récapitulatif des différents types de contraintes que nous avons abordés dans les exemples de code précédents :\n",
+    "\n",
+    "1. **Contraintes de séquencement entre les phases d'un même job** : Ces contraintes garantissent que chaque phase d'un job commence après la fin de la phase précédente.\n",
+    "\n",
+    "    ```python\n",
+    "    prob += x[job, i] >= y[job, i - 1], f\"StartAfterPrev_{job}_{i}\"\n",
+    "    ```\n",
+    "\n",
+    "2. **Contraintes de durée de phase** : Ces contraintes sont utilisées pour calculer le temps nécessaire pour exécuter une phase en fonction de son volume total de données (lecture + écriture) et de la bande passante du tier utilisé.\n",
+    "\n",
+    "    ```python\n",
+    "    total_volume = phase['read_volume'] + phase['write_volume']\n",
+    "    bandwidth = tier0_model(phase) if z[job, i, 0] == 1 else tier1_model(phase)\n",
+    "    prob += y[job, i] == x[job, i] + total_volume / bandwidth, f\"EndTime_{job}_{i}\"\n",
+    "    ```\n",
+    "\n",
+    "3. **Contraintes de choix de tier** : Ces contraintes garantissent qu'un seul tier est utilisé pour chaque phase.\n",
+    "\n",
+    "    ```python\n",
+    "    prob += z[job, i, 0] + z[job, i, 1] == 1, f\"SingleTier_{job}_{i}\"\n",
+    "    ```\n",
+    "\n",
+    "4. **Contraintes d'exécution en parallèle ou en séquence** : Dans le cas où les jobs doivent être exécutés en séquence, une contrainte supplémentaire serait ajoutée pour garantir que le job suivant ne commence qu'après la fin du job précédent.\n",
+    "\n",
+    "    ```python\n",
+    "    if sequential:\n",
+    "        prob += x['job2', 0] >= y['job1', len(job1_phase_features) - 1], \"Sequential_Jobs\"\n",
+    "    ```\n",
+    "\n",
+    "Ces contraintes forment la base de notre modèle d'ordonnancement et d'allocation des ressources, permettant une flexibilité dans la prise en compte des différentes dimensions du problème, telles que les volumes de données, les choix de tiers de stockage, et les exigences de séquencement des tâches.\n",
+    "\n",
+    "La contrainte sur le partage de la bande passante lorsque deux ou plusieurs phases utilisent le même tier peut être cruciale pour assurer un fonctionnement optimal du système. Cette contrainte garantit que la somme des bandes passantes allouées aux différentes phases n'excède pas la capacité maximale du tier concerné. \n",
+    "\n",
+    "Supposons que la capacité maximale de bande passante pour les tiers 0 et 1 soit respectivement \\(BW_{\\text{max, tier0}}\\) et \\(BW_{\\text{max, tier1}}\\).\n",
+    "\n",
+    "La variable de décision \\(w_{(i, j, k)}(t)\\) représente la bande passante attribuée à la phase \\(j\\) de la tâche \\(i\\) lorsqu'elle utilise le tier \\(k\\) au temps \\(t\\). La contrainte de partage de la bande passante peut alors être exprimée comme suit :\n",
+    "\n",
+    "\\[\n",
+    "\\sum_{i,j} w_{(i, j, k)}(t) \\leq BW_{\\text{max, tier}_k}, \\quad \\forall t, k\n",
+    "\\]\n",
+    "\n",
+    "Dans le code Python utilisant PuLP, cela pourrait être implémenté comme :\n",
+    "\n",
+    "```python\n",
+    "# Bandwidth capacity constraints\n",
+    "for t in time_range:\n",
+    "    for k in [0, 1]:  # For each tier\n",
+    "        prob += lpSum(w[i, j, k, t] for i, phase_list in phases.items() for j in range(len(phase_list))) <= max_bandwidth[k], f\"MaxBandwidth_Tier{k}_Time{t}\"\n",
+    "```\n",
+    "\n",
+    "Ici, `max_bandwidth` serait un dictionnaire contenant les capacités maximales de bande passante pour chaque tier, et `time_range` serait la plage de temps sur laquelle s'étend le problème.\n",
+    "\n",
+    "Vous avez tout à fait raison. La capacité maximale de la bande passante, représentée par `max_bandwidth[k]`, peut être déterminée en utilisant un modèle de régression qui prend en compte les caractéristiques de chaque phase. Ce modèle de régression pourrait être basé sur différents facteurs, tels que le volume de lecture/écriture, le nombre de nœuds, le type de modèle d'E/S, etc.\n",
+    "\n",
+    "Dans ce cas, la contrainte de bande passante maximale peut être dynamiquement mise à jour en fonction des caractéristiques de la phase. Par exemple :\n",
+    "\n",
+    "```python\n",
+    "# Bandwidth capacity constraints\n",
+    "for t in time_range:\n",
+    "    for k in [0, 1]:  # For each tier\n",
+    "        # Using the regression model to get the maximum bandwidth for the tier based on phase features\n",
+    "        max_bandwidth_k = tier_model[k](phase_features)\n",
+    "        \n",
+    "        prob += lpSum(w[i, j, k, t] for i, phase_list in phases.items() for j in range(len(phase_list))) <= max_bandwidth_k, f\"MaxBandwidth_Tier{k}_Time{t}\"\n",
+    "```\n",
+    "\n",
+    "Ici, `tier_model[k]` représente le modèle de régression pour le tier \\( k \\), et `phase_features` serait un ensemble de caractéristiques pertinentes pour la phase considérée. Ce modèle serait utilisé pour prédire la bande passante maximale possible pour un tier donné en fonction des caractéristiques de la phase en cours d'exécution.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "You're absolutely correct; I apologize for the oversight. If the `max_bandwidth` for each tier is dynamically determined using a regression model based on the phase features, the constraint should be formulated within the loop where each phase is accessed. Here is how you might do it:\n",
+    "\n",
+    "```python\n",
+    "# Bandwidth capacity constraints\n",
+    "for t in time_range:\n",
+    "    for k in [0, 1]:  # For each tier\n",
+    "        # Summation of bandwidth used by all phases at time t for tier k should not exceed the max bandwidth\n",
+    "        prob += lpSum(\n",
+    "            w[i, j, k, t] for i, phase_list in phases.items() for j, phase in enumerate(phase_list)\n",
+    "        ) <= tier_model[k](phase), f\"MaxBandwidth_Tier{k}_Time{t}\"\n",
+    "```\n",
+    "```python\n",
+    "# Contraintes sur la capacité de la bande passante\n",
+    "for t in time_range:\n",
+    "    for k in [0, 1]:  # Pour chaque niveau de stockage (tier)\n",
+    "        # La somme de la bande passante utilisée par toutes les phases au temps t pour le niveau k \n",
+    "        # ne doit pas dépasser la bande passante maximale pour ce niveau.\n",
+    "        # La fonction tier_model[k](phase) évalue la bande passante maximale pour le niveau k \n",
+    "        # en fonction des caractéristiques de la phase en cours.\n",
+    "        prob += lpSum(\n",
+    "            w[i, j, k, t] for i, phase_list in phases.items() for j, phase in enumerate(phase_list)\n",
+    "        ) <= tier_model[k](phase), f\"MaxBandwidth_Tier{k}_Time{t}\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "\n",
+    "La contrainte assure que la bande passante totale consommée par toutes les phases à tout moment \\( t \\) ne dépasse pas la bande passante maximale pour le niveau de stockage \\( k \\). Cette bande passante maximale est déterminée de manière dynamique en utilisant le modèle de régression `tier_model[k](phase)` sur les caractéristiques de la phase en cours.\n",
+    "\n",
+    "\n",
+    "Cette approche vous permet de tenir compte des variations potentielles de la bande passante en fonction de divers facteurs, rendant ainsi votre modèle plus adaptatif et robuste.\n",
+    "\n",
+    "Notez que cette approche nécessite de discrétiser le temps en plusieurs pas de temps, ce qui peut augmenter considérablement la taille du problème. Le choix de la taille du pas de temps dépendra donc d'un compromis entre précision et complexité de calcul.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Absolument, il est plus logique de diviser par \\( n_k(t) \\) uniquement si \\( n_k(t) > 0 \\). Vous pouvez le faire en ajoutant une condition dans votre contrainte. Voici comment cela pourrait être fait :\n",
+    "\n",
+    "```python\n",
+    "# Contraintes sur le partage de la capacité de la bande passante\n",
+    "for t in time_range:\n",
+    "    for k in [0, 1]:  # Pour chaque niveau de stockage (tier)\n",
+    "        # Calcul du nombre de phases utilisant le tier k au temps t\n",
+    "        n_k_t = lpSum(u[i, j, k, t] for i, phase_list in phases.items() for j, phase in enumerate(phase_list))\n",
+    "\n",
+    "        # La somme de la bande passante utilisée par toutes les phases au temps t pour le niveau k\n",
+    "        # ne doit pas dépasser la bande passante maximale pour ce niveau.\n",
+    "        max_bandwidth_k = tier_model[k](phase)\n",
+    "        prob += lpSum(\n",
+    "            w[i, j, k, t] for i, phase_list in phases.items() for j, phase in enumerate(phase_list)\n",
+    "        ) <= max_bandwidth_k, f\"MaxBandwidth_Tier{k}_Time{t}\"\n",
+    "\n",
+    "        # Si n_k_t > 0, alors on divise la bande passante maximale par n_k_t\n",
+    "        prob += lpSum(\n",
+    "            w[i, j, k, t] for i, phase_list in phases.items() for j, phase in enumerate(phase_list)\n",
+    "        ) <= max_bandwidth_k / (n_k_t + (n_k_t == 0)), f\"SharedBandwidth_Tier{k}_Time{t}\"\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Dans le contexte des systèmes HPC (High-Performance Computing), l'ordonnancement et l'allocation des ressources sont des problématiques cruciales. Ces défis sont particulièrement importants lorsque l'on considère des workflows complexes, composés de multiples tâches avec des dépendances et des contraintes diverses, telles que la bande passante, les volumes de lecture et d'écriture, et les différents niveaux de stockage (tiers). La Programmation Linéaire Mixte en Nombres Entiers (MILP) offre une méthode mathématique rigoureuse pour modéliser et résoudre ces types de problèmes. \n",
+    "\n",
+    "L'approche MILP est justifiée par sa capacité à gérer un grand nombre de contraintes linéaires et non-linéaires, tout en fournissant des solutions optimales ou quasi-optimales. Contrairement aux méthodes heuristiques, qui ne garantissent pas toujours une solution optimale, MILP assure que la solution obtenue est la meilleure possible selon la fonction objectif, sous réserve des contraintes définies. De plus, des outils logiciels tels que PuLP permettent une implémentation assez simple et directe des modèles MILP, tout en offrant des temps de résolution rapides pour des problèmes de taille modérée. \n",
+    "\n",
+    "En somme, l'approche MILP est particulièrement bien adaptée pour les environnements HPC où la précision, l'efficacité et la capacité à gérer des contraintes multiples sont essentielles. Elle permet une modélisation fine des différentes facettes du problème et offre une méthode robuste et fiable pour trouver des solutions optimales, ce qui en fait un choix judicieux pour notre système de recommandation destiné à optimiser la gestion des ressources dans les applications HPC.\n",
+    "\n",
+    "Je voudrais maintenant compléter le rapport avec une partie dédiée à l'analyse bayésienne. Fondamentalement, le résultat de recommandation premier est obtenu avec la résolution du problème MILP. Il permet d'obtenir un choix initial de tiers de stockage pour chaque phase de chaque job. L'analyse Bayésienne de mettre bout à bout un simulateur d'execution à qui on fournit un vecteur d'affectation de tiers à des phases et il nous retourne une timeline de l'exécution du workflow, et par conséquence sa durée qu'on cherche à optimiser. l'idée est d'utiliser la solution PuLP en réponse lorsque l'utilisateur invoque le système de recommendation. Puis de laisser la recherche bayésienne perturber légèrement le vecteur d'attribution des tiers aux phases des tâches pour explorer les solutions voisines, concurrentes, et ainsi établir un comparatif et pouvoir qualifier l'optimalité de la solution trouvé par PuLP. Après, la recherche bayésienne utilisant BBO (black box optimizer) ou Optuna risque d'itérer à plusieurs reprises sur des solutions de placements, qu'il injecte dans le simulateur d'exécution pour évaluer la performance (temps d'exécution du workflow), risque de prendre un peu plus de temps. En sortie, des graphiques et des analytiques comparatives sur la qualité de la solution trouvée sont prévues. \n",
+    "propose moi en complément au rapport, une organisation et quelques paragraphe pour exprimer ces idée. Tu peux poser des question pour obtenir des précisions et procéder par parties.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Setting the Cluster:\n",
     "- with one tier level (HDD)\n",
     "- with an ephemeral tier:\n",
