--- a/dataset_generation/dataset_deep/deep_jobs.ipynb
+++ b/dataset_generation/dataset_deep/deep_jobs.ipynb
@@ -2340,6 +2340,207 @@
     "                             ts=(timestamps, original_write, sim_write_bw), \n",
     "                             width=800, height=500)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# Define the path to the dataset folder\n",
+    "dataset_folder = './dataset_generation/dataset_deep/'\n",
+    "\n",
+    "# Initialize dictionary to hold job data\n",
+    "workflow_data = defaultdict(list)\n",
+    "\n",
+    "# Step 1: Load Data\n",
+    "for root, dirs, files in os.walk(dataset_folder):\n",
+    "    for filename in files:\n",
+    "        if filename == 'volume.json':\n",
+    "            filepath = os.path.join(root, filename)\n",
+    "            print(filepath)\n",
+    "            with open(filepath, 'r') as f:\n",
+    "                volume_data = json.load(f)\n",
+    "            \n",
+    "            # Extract the job start and end timestamps\n",
+    "            job_id = root.split('/')[-2]  # Assuming job ID is the parent folder name\n",
+    "            start_time = volume_data[0][0]\n",
+    "            end_time = volume_data[-1][0]\n",
+    "            \n",
+    "            # Store data in the dictionary\n",
+    "            workflow_data[job_id] = {'start_time': start_time, 'end_time': end_time}\n",
+    "\n",
+    "# Step 2: Sort Jobs by Timestamp\n",
+    "sorted_jobs = sorted(workflow_data.items(), key=lambda x: x[1]['start_time'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'371912': {'start_time': 1687960785000, 'end_time': 1687964390000}, '371913': {'start_time': 1687960790000, 'end_time': 1687964390000}, '371911': {'start_time': 1687960780000, 'end_time': 1687964390000}, '371906': {'start_time': 1687960695000, 'end_time': 1687960775000}, '371924': {'start_time': 1687964500000, 'end_time': 1687964500000}, '371910': {'start_time': 1687960775000, 'end_time': 1687964390000}, '371903': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371902': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371900': {'start_time': 1687960640000, 'end_time': 1687960640000}, '371908': {'start_time': 1687960765000, 'end_time': 1687964360000}, '371905': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371907': {'start_time': 1687960755000, 'end_time': 1687964360000}, '371904': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371909': {'start_time': 1687960770000, 'end_time': 1687964390000}})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from collections import defaultdict\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Function to check file extension\n",
+    "def is_file_extension(filename, extension):\n",
+    "    return filename.endswith(f'.{extension}')\n",
+    "\n",
+    "# Initialize dictionary to hold job data\n",
+    "workflow_data = defaultdict(list)\n",
+    "\n",
+    "# Default workflow folder\n",
+    "wf_folder = \"/home_nfs/mimounis/iosea-wp3-recommandation-system/dataset_generation/dataset_deep/ECMWF-649c3c40cc9340246f87cb58\"\n",
+    "\n",
+    "# Loop through all job folders in the workflow folder\n",
+    "for job_folder in os.listdir(wf_folder):\n",
+    "    #print(f\"----\\nProcessing job : {job_folder}...\")\n",
+    "    \n",
+    "    job_folder_path = os.path.join(wf_folder, job_folder)\n",
+    "    \n",
+    "    # Ensure that we are dealing with job folder\n",
+    "    if os.path.isdir(job_folder_path):\n",
+    "        json_file_path = os.path.join(job_folder_path, 'volume.json')\n",
+    "        \n",
+    "        # Check if volume.json exists in the job folder\n",
+    "        if os.path.exists(json_file_path):\n",
+    "            #print(f\"      Processing volume.json for job {job_folder}...\")\n",
+    "            \n",
+    "            # Read the JSON file into a list of lists\n",
+    "            with open(json_file_path, 'r') as f:\n",
+    "                volume_data = json.load(f)\n",
+    "            \n",
+    "            # Extract the job start and end timestamps\n",
+    "            start_time = volume_data[0][0]\n",
+    "            end_time = volume_data[-1][0]\n",
+    "            \n",
+    "            # Store data in the dictionary\n",
+    "            workflow_data[job_folder] = {'start_time': start_time, 'end_time': end_time}\n",
+    "\n",
+    "# Calculate Delays and Check for Overlaps\n",
+    "previous_end_time = 0\n",
+    "for i, (job_id, job_data) in enumerate(sorted_jobs):\n",
+    "    delay = job_data['start_time'] - previous_end_time\n",
+    "    print(f\"Delay between Job {sorted_jobs[i-1][0]} and Job {job_id}: {delay} ms\")\n",
+    "    \n",
+    "    if i > 0 and job_data['start_time'] < sorted_jobs[i-1][1]['end_time']:\n",
+    "        print(f\"Job {job_id} and Job {sorted_jobs[i-1][0]} have overlapping time spans.\")\n",
+    "    \n",
+    "    previous_end_time = job_data['end_time']\n",
+    "\n",
+    "    if delay < 5000:  # 5 seconds\n",
+    "        print(f\"Guessing 'afterok' dependency between Job {sorted_jobs[i-1][0]} and Job {job_id}\")\n",
+    "\n",
+    "print(workflow_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['371903', '371911', 5000], ['371902', '371911', 5000], ['371905', '371911', 5000], ['371904', '371911', 5000], ['371906', '371911', 5000]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Example sorted_jobs\n",
+    "sorted_jobs = sorted(\n",
+    "    {\n",
+    "        '371912': {'start_time': 1687960785000, 'end_time': 1687964390000},\n",
+    "        '371913': {'start_time': 1687960790000, 'end_time': 1687964390000},\n",
+    "        '371911': {'start_time': 1687960780000, 'end_time': 1687964390000},\n",
+    "        '371906': {'start_time': 1687960695000, 'end_time': 1687960775000},\n",
+    "        '371924': {'start_time': 1687964500000, 'end_time': 1687964500000},\n",
+    "        '371910': {'start_time': 1687960775000, 'end_time': 1687964390000},\n",
+    "        '371903': {'start_time': 1687960690000, 'end_time': 1687960775000},\n",
+    "        '371902': {'start_time': 1687960690000, 'end_time': 1687960775000},\n",
+    "        '371900': {'start_time': 1687960640000, 'end_time': 1687960640000},\n",
+    "        '371908': {'start_time': 1687960765000, 'end_time': 1687964360000},\n",
+    "        '371905': {'start_time': 1687960690000, 'end_time': 1687960775000},\n",
+    "        '371907': {'start_time': 1687960755000, 'end_time': 1687964360000},\n",
+    "        '371904': {'start_time': 1687960690000, 'end_time': 1687960775000},\n",
+    "        '371909': {'start_time': 1687960770000, 'end_time': 1687964390000}\n",
+    "    }.items(),\n",
+    "    key=lambda x: x[1]['start_time']\n",
+    ")\n",
+    "\n",
+    "# Initialize dependency dictionaries\n",
+    "dependencies = {\n",
+    "    'sequential': [],\n",
+    "    'parallel': [],\n",
+    "    'after': [],\n",
+    "    'delay': []\n",
+    "}\n",
+    "\n",
+    "# Threshold for 'after' dependency in milliseconds\n",
+    "threshold = 1000  # 1 second\n",
+    "# sorted_jobs = workflow_data\n",
+    "# Loop through sorted jobs\n",
+    "for i in range(len(sorted_jobs)):\n",
+    "    current_job_id, current_job_data = sorted_jobs[i]\n",
+    "    current_start, current_end = current_job_data['start_time'], current_job_data['end_time']\n",
+    "    \n",
+    "    for j in range(i+1, len(sorted_jobs)):\n",
+    "        next_job_id, next_job_data = sorted_jobs[j]\n",
+    "        next_start, next_end = next_job_data['start_time'], next_job_data['end_time']\n",
+    "        \n",
+    "        # Check for Sequential dependency\n",
+    "        if current_end <= next_start:\n",
+    "            dependencies['sequential'].append([current_job_id, next_job_id])\n",
+    "        \n",
+    "        # Check for Parallel dependency\n",
+    "        if current_start < next_end and current_end > next_start:\n",
+    "            dependencies['parallel'].append([current_job_id, next_job_id])\n",
+    "        \n",
+    "        # Check for 'After' dependency\n",
+    "        if next_start - current_end <= threshold:\n",
+    "            dependencies['after'].append([current_job_id, next_job_id])\n",
+    "        \n",
+    "        # Check for 'Delay' dependency (here, we specify an example delay of 5 seconds)\n",
+    "        if 5000 <= next_start - current_end <= 5000 + threshold:\n",
+    "            dependencies['delay'].append([current_job_id, next_job_id, 5000])\n",
+    "\n",
+    "print(dependencies[\"delay\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('371900', {'start_time': 1687960640000, 'end_time': 1687960640000}), ('371903', {'start_time': 1687960690000, 'end_time': 1687960775000}), ('371902', {'start_time': 1687960690000, 'end_time': 1687960775000}), ('371905', {'start_time': 1687960690000, 'end_time': 1687960775000}), ('371904', {'start_time': 1687960690000, 'end_time': 1687960775000}), ('371906', {'start_time': 1687960695000, 'end_time': 1687960775000}), ('371907', {'start_time': 1687960755000, 'end_time': 1687964360000}), ('371908', {'start_time': 1687960765000, 'end_time': 1687964360000}), ('371909', {'start_time': 1687960770000, 'end_time': 1687964390000}), ('371910', {'start_time': 1687960775000, 'end_time': 1687964390000}), ('371911', {'start_time': 1687960780000, 'end_time': 1687964390000}), ('371912', {'start_time': 1687960785000, 'end_time': 1687964390000}), ('371913', {'start_time': 1687960790000, 'end_time': 1687964390000}), ('371924', {'start_time': 1687964500000, 'end_time': 1687964500000})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((sorted_jobs))"
+   ]
   }
  ],
  "metadata": {
