--- a/cluster_simulator/notebooks/workflow.ipynb
+++ b/cluster_simulator/notebooks/workflow.ipynb
@@ -206,6 +206,312 @@
     "for edge in dfs_edges(graph, \"root\"):\n",
     "    print(edge)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Certainly! We can adjust the previous conceptual example to use \"jobs\" instead of \"tasks\" to represent instances of the `Application` class. In the context of an HPC workflow, a \"job\" usually refers to a computational task or a set of tasks that are submitted to an HPC system.\n",
+    "\n",
+    "Below is the revised example where we consider each \"job\" as an instance of an `Application`. The `Workflow` class is responsible for orchestrating the execution of these jobs according to the defined dependencies.\n",
+    "\n",
+    "```python\n",
+    "import simpy\n",
+    "\n",
+    "class Workflow:\n",
+    "    def __init__(self, env, jobs, dependencies):\n",
+    "        self.env = env\n",
+    "        self.jobs = jobs  # A dictionary of job_id to Application instances\n",
+    "        self.dependencies = dependencies  # A list of dependencies as provided\n",
+    "        self.job_events = {job_id: env.event() for job_id in jobs}  # Event for each job completion\n",
+    "\n",
+    "    def setup_dependencies(self):\n",
+    "        for dep in self.dependencies:\n",
+    "            pre_job_id, post_job_id, relation = dep\n",
+    "            pre_job_event = self.job_events[pre_job_id]\n",
+    "            post_job_event = self.job_events[post_job_id]\n",
+    "\n",
+    "            # Schedule jobs based on relation type\n",
+    "            if relation[\"type\"] == \"delay\":\n",
+    "                self.env.process(self.schedule_job(post_job_id, pre_job_event, delay=relation[\"delay\"]))\n",
+    "            elif relation[\"type\"] == \"parallel\":\n",
+    "                self.env.process(self.schedule_job(post_job_id, pre_job_event))\n",
+    "            elif relation[\"type\"] == \"sequential\":\n",
+    "                self.env.process(self.schedule_job(post_job_id, pre_job_event, sequential=True))\n",
+    "\n",
+    "    def schedule_job(self, job_id, pre_job_event, delay=0, sequential=False):\n",
+    "        # Wait for the predecessor job to complete\n",
+    "        yield pre_job_event\n",
+    "        # If there is a delay, process it\n",
+    "        if delay:\n",
+    "            yield self.env.timeout(delay)\n",
+    "        # If the job is sequential, check for other dependencies\n",
+    "        if sequential:\n",
+    "            yield self.env.process(self.check_other_dependencies(job_id))\n",
+    "        # Start the job\n",
+    "        job_event = self.env.process(self.jobs[job_id].run())\n",
+    "        # Update the event for this job\n",
+    "        self.job_events[job_id] = job_event\n",
+    "\n",
+    "    def check_other_dependencies(self, job_id):\n",
+    "        # Implement logic to wait for all sequential dependencies to complete\n",
+    "        # ...\n",
+    "\n",
+    "    def run(self):\n",
+    "        self.setup_dependencies()\n",
+    "        # Start all jobs that do not have any dependencies\n",
+    "        for job_id, job in self.jobs.items():\n",
+    "            if not any(dep[1] == job_id for dep in self.dependencies):\n",
+    "                self.env.process(job.run())\n",
+    "\n",
+    "# Usage example:\n",
+    "# env = simpy.Environment()\n",
+    "# jobs = {\n",
+    "#     'job1': Application(env, ...),\n",
+    "#     'job2': Application(env, ...),\n",
+    "#     # ...\n",
+    "# }\n",
+    "# dependencies = [\n",
+    "#     # ... (the provided list of dependencies)\n",
+    "# ]\n",
+    "# workflow = Workflow(env, jobs, dependencies)\n",
+    "# workflow.run()\n",
+    "# env.run()\n",
+    "```\n",
+    "\n",
+    "This code would still be a high-level template and should be fleshed out with the specific logic required to manage the dependencies, especially for handling sequential execution. The `check_other_dependencies` method is where you would implement the logic to ensure that all dependencies for a sequential job are completed before the job starts. This is left as a placeholder for you to customize based on the rules and constraints of your HPC system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Certainly, we can begin by implementing the `Workflow` class step-by-step, focusing on clear documentation, informative comments, and logging using the `loguru` package. We will also provide some unit tests for each method before proceeding to the next one.\n",
+    "\n",
+    "We'll start with the `__init__` method, which is responsible for initializing the `Workflow` class with the necessary attributes.\n",
+    "\n",
+    "### Workflow.__init__\n",
+    "\n",
+    "```python\n",
+    "from loguru import logger\n",
+    "\n",
+    "class Workflow:\n",
+    "    \"\"\"Class to manage the execution of jobs within a workflow with dependencies.\n",
+    "\n",
+    "    Attributes:\n",
+    "        env (simpy.Environment): The simulation environment.\n",
+    "        jobs (dict): A dictionary mapping job IDs to Application instances.\n",
+    "        dependencies (list): A list of dependencies. Each dependency is represented as a list\n",
+    "            with the format [pre_job_id, post_job_id, relation].\n",
+    "        job_events (dict): A dictionary mapping job IDs to SimPy events. These events signal job completion.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def __init__(self, env, jobs, dependencies):\n",
+    "        \"\"\"Initialize the Workflow instance.\n",
+    "\n",
+    "        Args:\n",
+    "            env (simpy.Environment): The SimPy environment where the simulation runs.\n",
+    "            jobs (dict): A dictionary mapping job IDs to Application instances.\n",
+    "            dependencies (list): A list where each item represents a dependency. Each dependency is a list\n",
+    "                with the format [pre_job_id, post_job_id, relation].\n",
+    "        \"\"\"\n",
+    "        logger.debug(\"Initializing Workflow instance.\")\n",
+    "        self.env = env\n",
+    "        self.jobs = jobs  # A dictionary of job_id to Application instances\n",
+    "        self.dependencies = dependencies  # A list of dependencies as provided\n",
+    "        self.job_events = {job_id: env.event() for job_id in jobs}  # Event for each job completion\n",
+    "\n",
+    "        logger.info(f\"Workflow initialized with {len(self.jobs)} jobs and {len(self.dependencies)} dependencies.\")\n",
+    "```\n",
+    "\n",
+    "### Unit Test for Workflow.__init__\n",
+    "\n",
+    "Before proceeding to the next method, let's consider a unit test for the `__init__` method. We want to ensure that:\n",
+    "\n",
+    "1. The workflow is initialized with the correct number of jobs.\n",
+    "2. The workflow is initialized with the correct number of dependencies.\n",
+    "3. The job events are created for each job.\n",
+    "\n",
+    "Here's an example of a unit test using `pytest`:\n",
+    "\n",
+    "```python\n",
+    "from simpy import Environment\n",
+    "import pytest\n",
+    "\n",
+    "def test_workflow_initialization():\n",
+    "    env = Environment()\n",
+    "    jobs = {'job1': MockApplication(), 'job2': MockApplication()}\n",
+    "    dependencies = [\n",
+    "        ['job1', 'job2', {'type': 'sequential'}]\n",
+    "    ]\n",
+    "\n",
+    "    workflow = Workflow(env, jobs, dependencies)\n",
+    "\n",
+    "    assert len(workflow.jobs) == 2\n",
+    "    assert len(workflow.dependencies) == 1\n",
+    "    assert all(job_id in workflow.job_events for job_id in jobs)\n",
+    "\n",
+    "class MockApplication:\n",
+    "    # A mock application class for testing purposes.\n",
+    "    def run(self):\n",
+    "        pass\n",
+    "```\n",
+    "\n",
+    "In the unit test above, we use a `MockApplication` class to simulate the Application instances that would normally be passed to the `Workflow` class. This is a common practice in unit testing to isolate the class or method being tested.\n",
+    "\n",
+    "We can now move on to the next method, `setup_dependencies`, once we are confident that the initialization is working correctly. Before doing that, do you have any specific requirements for the `setup_dependencies` method, or shall we proceed with the standard implementation?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll focus on the `setup_dependencies` method. This method is responsible for setting up the execution order of jobs based on their dependencies. The method will iterate over the dependency list and schedule jobs according to the type of relationship they have with each other: delay, parallel, or sequential.\n",
+    "\n",
+    "### Workflow.setup_dependencies\n",
+    "\n",
+    "```python\n",
+    "class Workflow:\n",
+    "    # ... previous code remains unchanged ...\n",
+    "\n",
+    "    def setup_dependencies(self):\n",
+    "        \"\"\"Set up job execution based on dependencies.\"\"\"\n",
+    "        logger.debug(\"Setting up job dependencies.\")\n",
+    "        for dep in self.dependencies:\n",
+    "            pre_job_id, post_job_id, relation = dep\n",
+    "            pre_job_event = self.job_events[pre_job_id]\n",
+    "            post_job_event = self.job_events[post_job_id]\n",
+    "\n",
+    "            # Schedule jobs based on relation type\n",
+    "            if relation[\"type\"] == \"delay\":\n",
+    "                logger.debug(f\"Scheduling job {post_job_id} to start after a delay following job {pre_job_id}.\")\n",
+    "                self.env.process(self.schedule_job(post_job_id, pre_job_event, delay=relation[\"delay\"]))\n",
+    "            elif relation[\"type\"] == \"parallel\":\n",
+    "                logger.debug(f\"Scheduling job {post_job_id} to start in parallel after job {pre_job_id}.\")\n",
+    "                self.env.process(self.schedule_job(post_job_id, pre_job_event))\n",
+    "            elif relation[\"type\"] == \"sequential\":\n",
+    "                logger.debug(f\"Scheduling job {post_job_id} to start sequentially after job {pre_job_id}.\")\n",
+    "                self.env.process(self.schedule_job(post_job_id, pre_job_event, sequential=True))\n",
+    "        logger.info(\"Job dependencies setup complete.\")\n",
+    "```\n",
+    "\n",
+    "### Unit Test for Workflow.setup_dependencies\n",
+    "\n",
+    "Now we'll write unit tests for the `setup_dependencies` method. We want to ensure that:\n",
+    "\n",
+    "1. Jobs with a delay dependency do not start until the delay has passed after the completion of the prerequisite job.\n",
+    "2. Jobs with a parallel dependency start immediately after the prerequisite job completes.\n",
+    "3. Jobs with a sequential dependency do not start until all of their sequential prerequisites have completed.\n",
+    "\n",
+    "Here's an example of a unit test using `pytest`:\n",
+    "\n",
+    "```python\n",
+    "def test_setup_dependencies():\n",
+    "    env = Environment()\n",
+    "    jobs = {'job1': MockApplication(), 'job2': MockApplication(), 'job3': MockApplication()}\n",
+    "    dependencies = [\n",
+    "        ['job1', 'job2', {'type': 'delay', 'delay': 10}],\n",
+    "        ['job2', 'job3', {'type': 'parallel'}]\n",
+    "    ]\n",
+    "\n",
+    "    workflow = Workflow(env, jobs, dependencies)\n",
+    "    workflow.setup_dependencies()\n",
+    "\n",
+    "    env.run(until=5)\n",
+    "    assert not workflow.job_events['job2'].processed  # Job 2 should not have started yet (delay of 10)\n",
+    "\n",
+    "    env.run(until=15)\n",
+    "    assert workflow.job_events['job2'].processed  # Job 2 should have started after the delay\n",
+    "    assert not workflow.job_events['job3'].processed  # Job 3 should not have started yet (waiting for job 2 to complete)\n",
+    "\n",
+    "    # Let's assume job 2 completed at time 15\n",
+    "    workflow.job_events['job2'].succeed()\n",
+    "    env.run(until=16)\n",
+    "    assert workflow.job_events['job3'].processed  # Job 3 should start immediately after job 2 completes\n",
+    "```\n",
+    "\n",
+    "For this unit test, we have defined a scenario where `job2` should start with a delay after `job1`, and `job3` should start immediately after `job2`. We run the environment for a specific amount of simulated time and check whether the jobs have started as expected.\n",
+    "\n",
+    "Before proceeding to the implementation of the `schedule_job` and `check_other_dependencies` methods, would you like to discuss or adjust the approach taken so far?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Continuing with the `schedule_job` method, we need to ensure it properly waits for the triggering event (completion of a previous job), handles any delays, and checks for other dependencies if the job is to be scheduled sequentially. Additionally, we should ensure that the `job_event` for the job's completion is correctly updated in the `job_events` dictionary.\n",
+    "\n",
+    "### Workflow.schedule_job\n",
+    "\n",
+    "```python\n",
+    "class Workflow:\n",
+    "    # ... previous code remains unchanged ...\n",
+    "\n",
+    "    def schedule_job(self, job_id, pre_job_event, delay=0, sequential=False):\n",
+    "        \"\"\"Schedule a job to start after its dependencies have been met.\n",
+    "\n",
+    "        Args:\n",
+    "            job_id (str): The identifier for the job to be scheduled.\n",
+    "            pre_job_event (simpy.Event): The event indicating the completion of the prerequisite job.\n",
+    "            delay (int, optional): The delay time after which the job should start. Defaults to 0.\n",
+    "            sequential (bool, optional): Whether the job should check for other sequential dependencies. Defaults to False.\n",
+    "        \"\"\"\n",
+    "        logger.debug(f\"Waiting for the completion of job {pre_job_event} to schedule job {job_id}.\")\n",
+    "        yield pre_job_event\n",
+    "        \n",
+    "        if delay:\n",
+    "            logger.debug(f\"Delaying job {job_id} start by {delay} time units.\")\n",
+    "            yield self.env.timeout(delay)\n",
+    "        \n",
+    "        if sequential:\n",
+    "            logger.debug(f\"Checking for other sequential dependencies for job {job_id}.\")\n",
+    "            yield self.env.process(self.check_other_dependencies(job_id))\n",
+    "        \n",
+    "        logger.info(f\"Starting job {job_id}.\")\n",
+    "        job_event = self.env.process(self.jobs[job_id].run())\n",
+    "        \n",
+    "        # Update the event for this job\n",
+    "        self.job_events[job_id] = job_event\n",
+    "```\n",
+    "\n",
+    "### Unit Test for Workflow.schedule_job\n",
+    "\n",
+    "For the `schedule_job` method, we want to ensure that:\n",
+    "\n",
+    "1. The job waits for the prerequisite job's event.\n",
+    "2. If there is a delay, the job starts after that delay.\n",
+    "3. If the job is sequential, it waits for all its sequential prerequisites.\n",
+    "\n",
+    "Here's an example of a unit test using `pytest`:\n",
+    "\n",
+    "```python\n",
+    "def test_schedule_job():\n",
+    "    env = simpy.Environment()\n",
+    "    job_events = {\n",
+    "        'job1': env.event(),\n",
+    "        'job2': env.event(),\n",
+    "        'job3': env.event()\n",
+    "    }\n",
+    "    jobs = {'job1': MockApplication(), 'job2': MockApplication(), 'job3': MockApplication()}\n",
+    "    workflow = Workflow(env, jobs, job_events, [])\n",
+    "\n",
+    "    # Assume job1 completes at time 5\n",
+    "    env.process(workflow.schedule_job('job2', job_events['job1'], delay=5))\n",
+    "    job_events['job1'].succeed(at=5)\n",
+    "    \n",
+    "    env.run(until=9)\n",
+    "    assert not job_events['job2'].processed  # Job 2 should not have started yet (delay of 5)\n",
+    "\n",
+    "    env.run(until=11)\n",
+    "    assert job_events['job2'].processed  # Job 2 should start after the delay\n",
+    "\n",
+    "    # For sequential jobs, more complex logic will be needed in the test to simulate other dependencies\n",
+    "```\n",
+    "\n",
+    "In this unit test, we are simulating the scheduling of `job2` to start after a delay once `job1` completes. We trigger the completion of `job1` at time 5 and then run the simulation until time 9 to confirm that `job2` has not started prematurely. Then we run it until time 11 to confirm that `job2` starts after the correct delay.\n",
+    "\n",
+    "Would you like to make any adjustments or proceed with the implementation of the `check_other_dependencies` method?"
+   ]
   }
  ],
  "metadata": {
@@ -227,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.7"
   },
   "orig_nbformat": 4
  },
