test(workflow): Add and update unit tests for Workflow dependency handling

--- a/cluster_simulator/notebooks/workflow.ipynb
+++ b/cluster_simulator/notebooks/workflow.ipynb
@@ -512,6 +512,176 @@
     "\n",
     "Would you like to make any adjustments or proceed with the implementation of the `check_other_dependencies` method?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `TypeError: 'NoneType' object is not iterable` error you're encountering in the `self.job_events[job_id].succeed()` call suggests that there might be an issue with the event that is supposed to be triggered.\n",
+    "\n",
+    "In SimPy, events are used for synchronization: they get \"triggered\" or \"succeeded\" once the condition they are waiting for is met. When you call `succeed()` on an event, it should resolve and allow any processes waiting on that event to continue. If `succeed()` is called on an event that is already triggered or has not been properly initialized, it could potentially lead to errors.\n",
+    "\n",
+    "Here are a few things you might want to check:\n",
+    "\n",
+    "1. **Event Initialization**: Ensure that the event associated with `job_id` in `self.job_events` has been properly initialized before you call `succeed()` on it. If the event is somehow `None`, then calling `succeed()` will result in the error you're seeing.\n",
+    "\n",
+    "2. **Event Triggering Sequence**: Verify the sequence in which events are being triggered. It's important that the event is not being succeeded prematurely, that is, before the job it's associated with has actually completed its execution.\n",
+    "\n",
+    "3. **Event Re-triggering**: Make sure that you're not trying to succeed an event that has already been succeeded. An event should only be succeeded once.\n",
+    "\n",
+    "4. **Job Completion Logic**: Check the logic that determines when a job is considered complete and ensure that it accurately reflects when the job's execution is truly done.\n",
+    "\n",
+    "5. **Test Environment Setup**: Since this error occurs in a test, ensure your test environment correctly sets up all the necessary preconditions for the workflow execution, including event initialization for all jobs, even those without dependencies.\n",
+    "\n",
+    "6. **Exception Handling**: Implement exception handling around the event triggering to catch any errors and provide more information about the failure.\n",
+    "\n",
+    "7. **Debugging Information**: Enhance logging to include more information about the state of each job and event at the time `succeed()` is called. This could help identify if there's a specific condition or state that leads to the error.\n",
+    "\n",
+    "Here's a snippet that includes a check for whether the event is `None` before calling `succeed()`:\n",
+    "\n",
+    "```python\n",
+    "def run_job(self, job_id, cluster=None, placement=None, use_bb=None):\n",
+    "    # ... existing code ...\n",
+    "    \n",
+    "    # Start the job's execution within the simulation environment\n",
+    "    job_process = self.env.process(self.jobs[job_id].run(cluster=cluster,\n",
+    "                                        placement=placement,\n",
+    "                                        use_bb=use_bb))\n",
+    "    \n",
+    "    # Wait for the job to complete\n",
+    "    yield job_process\n",
+    "    # Check if the event has been properly initialized and is not already triggered\n",
+    "    if self.job_events[job_id] is not None and not self.job_events[job_id].processed:\n",
+    "        # Once the job process is done, trigger the job's event to signal completion\n",
+    "        self.job_events[job_id].succeed()\n",
+    "```\n",
+    "\n",
+    "If the issue persists even after these checks, it may be necessary to review the logic surrounding how and when jobs are being executed and how their completion is being signaled to the workflow management system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output indicates that there is a mismatch in the expected types associated with the `job_events` dictionary. For the first job, it correctly shows an `Event` object, which is what you would expect to be present in the `job_events` dictionary. However, for the second job, the output indicates that instead of an `Event` object, there is a `Process` object.\n",
+    "\n",
+    "In SimPy, an `Event` object is a one-time occurrence that processes can wait for, while a `Process` object represents an ongoing activity that is defined by a generator function. The `succeed()` method is meant to be called on an `Event`, not a `Process`.\n",
+    "\n",
+    "Here's what could be happening:\n",
+    "\n",
+    "- When you initially populate `self.job_events` with `self.env.event()` for each job, it should only contain `Event` objects.\n",
+    "- Somehow, for the second job, `self.job_events[job_id]` is getting assigned a `Process` object, which likely represents the execution process of the job itself.\n",
+    "\n",
+    "To fix this, you need to ensure that `self.job_events` always contains `Event` objects and that you don't overwrite these events with `Process` objects. One possible cause of this could be the following line of code in your `schedule_job` method:\n",
+    "\n",
+    "```python\n",
+    "self.job_events[job_id] = self.env.process(self.run_job(job_id))\n",
+    "```\n",
+    "\n",
+    "This line should not reassign `self.job_events[job_id]` but instead should be yielding the process. You might want to adjust this part to keep the original event and use it to signal completion, like so:\n",
+    "\n",
+    "```python\n",
+    "# Incorrect\n",
+    "self.job_events[job_id] = self.env.process(self.run_job(job_id))\n",
+    "\n",
+    "# Correct\n",
+    "self.env.process(self.run_job(job_id))  # Simply start the process, don't reassign the event.\n",
+    "```\n",
+    "\n",
+    "Then, within the `run_job` method, you would call `succeed()` on the existing event:\n",
+    "\n",
+    "```python\n",
+    "def run_job(self, job_id, cluster=None, placement=None, use_bb=None):\n",
+    "    # ... existing code ...\n",
+    "    \n",
+    "    # Start the job's execution within the simulation environment\n",
+    "    job_process = yield self.env.process(self.jobs[job_id].run(cluster=cluster, placement=placement, use_bb=use_bb))\n",
+    "\n",
+    "    # Wait for the job to complete\n",
+    "    yield job_process\n",
+    "\n",
+    "    # Trigger the job's event to signal completion, ensuring it's the correct type\n",
+    "    event_to_trigger = self.job_events[job_id]\n",
+    "    if isinstance(event_to_trigger, simpy.events.Event) and not event_to_trigger.triggered:\n",
+    "        event_to_trigger.succeed()\n",
+    "```\n",
+    "\n",
+    "Make sure that you never overwrite the `Event` objects in `self.job_events` with `Process` objects, and this should resolve the issue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test the `run_job` and `schedule_job` methods in your `Workflow` class, you can extend the `TestWorkflow` class with new test cases. You should aim to test different scenarios and edge cases that these methods can encounter. Here are some steps and examples on how to approach this:\n",
+    "\n",
+    "### Testing `run_job` Method\n",
+    "\n",
+    "For the `run_job` method, you would want to ensure that:\n",
+    "\n",
+    "1. The job runs with the correct parameters (cluster, placement, use_bb).\n",
+    "2. The job's event is successfully triggered upon completion.\n",
+    "\n",
+    "You can create a mock application class that mimics the behavior of the `Application` class without actually running a job, and then check if the job's event is triggered after the simulated run.\n",
+    "\n",
+    "```python\n",
+    "@patch(\"cluster_simulator.application.Application.run\")\n",
+    "def test_run_job(self, mock_run):\n",
+    "    mock_run.return_value = iter([None])  # Simulate an instantaneous job run\n",
+    "    \n",
+    "    job_id = 'job1'\n",
+    "    jobs = {job_id: MockApplication(self.env, compute=[0, 10], read=[1e9, 0], write=[0, 5e9])}\n",
+    "    dependencies = []\n",
+    "\n",
+    "    workflow = Workflow(self.env, jobs, dependencies, self.cluster)\n",
+    "    workflow.run_job(job_id)  # You might need to yield this if it's a generator\n",
+    "\n",
+    "    self.env.run()\n",
+    "\n",
+    "    # Check if the job event is triggered\n",
+    "    self.assertTrue(workflow.job_events[job_id].triggered)\n",
+    "```\n",
+    "\n",
+    "### Testing `schedule_job` Method\n",
+    "\n",
+    "For the `schedule_job` method, you will want to test:\n",
+    "\n",
+    "1. Jobs are correctly scheduled after their dependencies have been met.\n",
+    "2. Delays are properly introduced if specified in the relation.\n",
+    "3. The correct handling of different relation types (e.g., 'sequential', 'parallel').\n",
+    "\n",
+    "You can use a similar approach as above but with additional steps to simulate the dependencies and potentially the delay.\n",
+    "\n",
+    "```python\n",
+    "@patch(\"cluster_simulator.application.Application.run\")\n",
+    "def test_schedule_job_with_delay(self, mock_run):\n",
+    "    mock_run.return_value = iter([None])  # Simulate an instantaneous job run\n",
+    "\n",
+    "    job_id = 'job2'\n",
+    "    jobs = {\n",
+    "        'job1': MockApplication(self.env, compute=[0, 10], read=[1e9, 0], write=[0, 5e9]),\n",
+    "        job_id: MockApplication(self.env, compute=[0, 10], read=[1e9, 0], write=[0, 5e9])\n",
+    "    }\n",
+    "    dependencies = [('job1', job_id, {'type': 'delay', 'delay': 10})]\n",
+    "\n",
+    "    workflow = Workflow(self.env, jobs, dependencies, self.cluster)\n",
+    "    # Assume job1 has completed\n",
+    "    workflow.job_events['job1'].succeed()\n",
+    "    workflow.schedule_job(job_id, workflow.job_events['job1'], dependencies[0][2])\n",
+    "\n",
+    "    start_time = self.env.now\n",
+    "    self.env.run()\n",
+    "\n",
+    "    # Check if the delay was respected\n",
+    "    self.assertEqual(self.env.now, start_time + 10)\n",
+    "    # Check if the job event is triggered\n",
+    "    self.assertTrue(workflow.job_events[job_id].triggered)\n",
+    "```\n",
+    "\n",
+    "Remember to patch the `run` method of the `Application` class to avoid actually running the job in your tests, and instead, simulate the expected behavior.\n",
+    "\n",
+    "When writing unit tests, it's important to make them independent and focused. Each test should aim to verify a specific behavior of the method under test. Therefore, you can create multiple test methods to cover different scenarios for `schedule_job`, including testing different relation types and handling of jobs with no dependencies."
+   ]
   }
  ],
  "metadata": {
